# radio

./: README.md  client-config.example.json  pyproject.toml  requirements.txt  server-config.example.json
packaging/: client_gui.spec
radio_wz/client/: client_gui.py  client_service.py
radio_wz/common/: protocol.py
radio_wz/server/: server_app.py
scripts/: build_client_exe.ps1
